fix (MWPW-140546): fixes third line cutoff on Chinese pages (#123)
* fix (MWPW-140546): fixes third line cutoff on chinese pages

* Update card.less

* fix (MWPW-140546): fixes third line cutoff on chinese pages

--- a/less/components/consonant/cards/card.less
+++ b/less/components/consonant/cards/card.less
@@ -55,7 +55,7 @@
     }
 
     &-label + &-title + p {
-        max-height: 1rem * 3;
+        max-height: 1rem * 4;
         line-height: 1rem;
     }
 
