--- a/less/components/consonant/cards/one-half.less
+++ b/less/components/consonant/cards/one-half.less
@@ -116,7 +116,7 @@
     &--2up,
     &--3up {
         .consonant-Card.one-half {
-            height: @consonantCardHeight;
+            min-height: @consonantCardHeight;
         }
     }
 
